<resources>
    <string name="app_name">phase1</string>
    <string name="homeName">Home</string>
    <string name="cartName">Cart</string>
    <string name="notificationName">Notification</string>
    <string name="accountName">Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nileRetro">Air Jordan Retro 10</string>
    <string name="nikeUnitP1">2330.75</string>
    <string name="size">Size:</string>
    <string name="sizeNo1">7</string>
    <string name="btnPlus1">+</string>
    <string name="btnMinus">-</string>
    <string name="no1">1</string>
    <string name="adidas">Adidas Stan</string>
    <string name="adidasStanUP">4440.25</string>
    <string name="sketcher">Sketchers W</string>
    <string name="sktchersUP">5500.0</string>
    <string name="sizeNo2">8</string>
    <string name="subTotal">Sub Total Price </string>
    <string name="subAmount">12271.0</string>
    <string name="deliveryPDetail">Delivery Price</string>
    <string name="delPrice">669.0</string>
    <string name="totPDetails">Total Price</string>
    <string name="totPrice">12940.0</string>
    <string name="btnCheckout">Checkout</string>
    <string name="userRegister">Register</string>
    <string name="labelName">Name</string>
    <string name="edtName">Enter the Name</string>
    <string name="labelEmail">Email</string>
    <string name="edtEmail">Enter the Email</string>
    <string name="labelPhone">Phone No</string>
    <string name="edtPhone">Enter the Phone No</string>
    <string name="labelUName">User Name</string>
    <string name="edtUName">Enter the User Name</string>
    <string name="labelPassword">Password</string>
    <string name="edtPassword">Enter the Password</string>
    <string name="login">Already have an account? Login</string>
    <string name="btnsubmit">Submit</string>
    <string name="reg_succ">Successfully purchased product deliver within 5 days</string>
    <string name="newProduct">heyy!!! new shoes are available explore the home page</string>
    <string name="delivered">Shoe successfully delivered. Thank you for purchasing</string>
    <string name="btnedt">Edit Profile </string>
    <string name="btnaddress">Edit Address</string>
    <string name="labelAddress">Address</string>
    <string name="title_activity_login">login</string>
    <string name="btnloginAd">Admin Login</string>
    <string name="btnloginUser">User Login</string>
    <string name="btncreate">Create Account</string>
    <string name="logtitle">Login</string>
    <string name="adiGlad">Adidas Predator Gladiator</string>
    <string name="adiDetail">Air Jordan is a line of basketball shoes and athletic clothing produced by American corporation Nike.
        The first Air Jordan shoe was produced for Hall of Fame former basketball player Michael Jordan</string>
    <string name="sizeSelect">Select Size</string>
    <string name="detailTitle">Details</string>
    <string name="btnCart">Add to cart</string>
    <string name="price">Price</string>
    <string name="adiGladPrice">5675.0</string>
    <string name="btnRemove">Remove</string>
    <string name="btnComment">comment</string>
</resources>