<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartPage">

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="88dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homeName"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/homeName"
        android:textAlignment="center"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/hh"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeName"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/unselected_home" />

    <ImageView
        android:id="@+id/imagecart1"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hh"
        app:srcCompat="@drawable/selected_cart" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagecart1"
        app:srcCompat="@drawable/unselected_notification" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/unselecte_account" />

    <TextView
        android:id="@+id/cartName"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/cartName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeName" />

    <TextView
        android:id="@+id/notificationName"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:text="@string/notificationName"
        android:textAlignment="viewStart"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cartName" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/accountName"
        android:textAlignment="center"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="640dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CartRecycle"
            android:layout_width="408dp"
            android:layout_height="553dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="7dp"
            android:paddingTop="10dp"
            android:text="Total"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/totPrice"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="7dp"
            android:paddingTop="10dp"
            android:text="2777"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>